Pink, white and yellow mooblooms spawn in cherry groves